2009-06-05  Noel O'Boyle  <baoilleach@gmail.com>

	* src/math/vector3.cpp: Reenable defensive checks in calculation of
	angle between two vectors. Prevents bug where dp is slightly greater
	than 1.0 under certain conditions.

2009-06-05  Noel O'Boyle  <baoilleach@gmail.com>

	* src/builder.cpp: Prevent partial matching. The code currently
	doesn't handle this.

2009-06-05  Noel O'Boyle  <baoilleach@gmail.com>

	* src/builder.cpp: Skip SMARTS patterns that are too big to match.
	Smaller performance boost.
	
2009-06-02  Noel O'Boyle  <baoilleach@gmail.com>

	* src/builder.cpp: Only iterate over the unique SMARTS matches and
	stop once all ring atoms have been assigned. Performance win.
	
2009-05-29  Michael Banck  <mbanck@gmx.net>

	* src/formats/gausszmatformat.cpp (ReadMolecule): Account for negative
	variable reference in dihedral angles, patch by Hugh Chaffey-Millar.
	Fixes PR#2798297.
	
2009-05-28  Michael Banck  <mbanck@gmx.net>

	* src/formats/gausszmatformat.cpp (ReadMolecule): Fix reading of
	dihedral angles, patch by Donnie Berkholz <dberkholz@gentoo.org>.

2009-05-27  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabel-python.i: Allow access to OBBuilder and matrix3x3

2009-05-19  Michael Banck  <mbanck@gmx.net>

	* src/formats/gaussformat.cpp (ReadMolecule): Add parsing of NMR
	isotropic shifts.  Patch by David C. Lonie.  Fixes PR#2787088.

2009-05-12  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/generic.cpp (OBUnitCell::FillUnitCell): Update with code
	from Avogadro. Now should handle duplicate atoms.

2009-05-04  Michael Banck  <mbanck@gmx.net>

	* src/formats/moldenformat.cpp (ReadMolecule): Read in atom
	coordinates via [FR-COORD] block if no atoms have been read
	previously.  Fixes PR#2786716.

	* src/formats/gamessformat.cpp (ReadMolecule): Fix parsing of
	intensities.  Keep on reading displacements even if there is only a
	single one.  Rewritten normal coordinates parsing.  Fixes PR#2782132.
