@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT([Open Babel], 2.2.2b1, openbabel-discuss@lists.sourceforge.net, openbabel)
+AC_INIT([Open Babel], 2.2.2b2, openbabel-discuss@lists.sourceforge.net, openbabel)
 AC_PREREQ([2.61])
 AC_CONFIG_SRCDIR(src/zipstreamimpl.h)
 AM_INIT_AUTOMAKE([foreign no-define])
