@@ -1,3 +1,7 @@
+2009-06-07  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* test/Makefile.am: Remove kekule.cpp used as an internal test.
+
 2009-06-05  Noel O'Boyle  <baoilleach@gmail.com>
 
 	* src/math/vector3.cpp: Reenable defensive checks in calculation of
